--- a/Marvel/app/src/main/res/layout/activity_login.xml
+++ b/Marvel/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
         android:text="@string/crie_sua_conta_agora"
         android:textAlignment="textEnd"
         android:layout_margin="@dimen/margin_16"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/et_password_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
